<resources>
    <string name="app_name" translatable="false">Tasktify</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="Profile">Profile</string>
    <string name="hello_user">Hello,\nFred</string>
    <string name="input_title">title</string>
    <string name="hint_input_title">Go to market</string>
    <string name="input_date">Date</string>
    <string name="input_description">Description</string>
    <string name="save_task">Save task</string>
    <string name="successful_new_task">Task saved successful!</string>
    <string name="system_error">Ha ocurrido un error con el sistema, intente de nuevo mas tarde</string>
    <string name="add_task">Add Task</string>
    <string name="plus_text">+</string>
    <string name="update_task">Update task</string>
    <string name="delete_task">Delete task</string>
    <string name="register">Register</string>
    <string name="fullname">Full name</string>
    <string name="signup">Sign Up</string>
    <string name="user_register_success">User registered successful!</string>
    <string name="link_login">Do you have account?</string>
    <string name="link_login_anchor">Sign In</string>
    <string name="link_register_anchor">Sign up!</string>
    <string name="link_register">Need an account?</string>
    <string name="tasktify_splash_screen">Tasktify Splash Screen</string>
    <string name="email_required">Email field required</string>
    <string name="password_required">Password field is required</string>
    <string name="email_password_mismatch_error">Email or password is not correct</string>
    <string name="fullname_required">Fullname field is required</string>
    <string name="title_required">Title field is required</string>
    <string name="description_required">Description field is required</string>
    <string name="empty_task_message">No task available to show</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="date_field_required">Date field required</string>
</resources>